processor/src/test/resources/good/inheritance/OtherPackage.java
package other;

import io.norberg.automatter.AutoMatter;

public interface OtherPackage {

  @AutoMatter
  interface OtherPackageNestedInterface {
    String foo();
  }
}
