processor/src/test/resources/bad/MissingImport.java
import io.norberg.automatter.AutoMatter;

@AutoMatter
public interface MissingImport {
  Dependency dependency();
}